--- a/BLOG/css/style.css
+++ b/BLOG/css/style.css
@@ -10,5 +10,11 @@
     height: 50px;
     font-size: 14px;
     text-transform: uppercase; }
+  #belt .content {
+    margin: auto; }
+    #belt .content .add {
+      margin: auto; }
+    #belt .content .add {
+      margin: auto; }
 
 /*# sourceMappingURL=style.css.map */
