--- a/BLOG/css/style.scss
+++ b/BLOG/css/style.scss
@@ -13,9 +13,14 @@
     height: 50px;
     font-size: 14px;
     text-transform: uppercase;
-
-    a{
-
+  }
+  .content{
+    margin: auto;
+    .add{
+      margin: auto;
+    }
+    .add{
+      margin: auto;
     }
   }
 }
