--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -1,11 +1,58 @@
-@charset "utf-8";
 html, body {
-    margin: 0;
-    padding: 0;
-    min-height: 100%;
-}
-main{
-    width: 960px;
-    background: silver;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  min-height: 100%; }
 
-}
+main {
+  max-width: 960px;
+  background: silver;
+  text-align: center;
+  margin: 10px auto;
+  border-radius: 7px;
+  border: 1px solid transparent; }
+  main hr {
+    color: white; }
+  main header {
+    background: white;
+    text-align: right;
+    margin: 0 10px;
+    border-radius: 3px; }
+    main header a {
+      text-decoration: none;
+      padding: 0 2px;
+      color: black; }
+    main header a:hover {
+      color: #bbbbbb; }
+  main button {
+    border-radius: 3px;
+    border: 1px solid transparent; }
+  main button:hover {
+    color: silver;
+    background: white; }
+  main ul {
+    margin: 0;
+    padding: 0; }
+    main ul li {
+      list-style-type: none; }
+      main ul li a {
+        text-decoration: none;
+        color: black; }
+      main ul li a:hover {
+        color: #ededed; }
+      main ul li .text {
+        padding: 20px 0 20px 0; }
+      main ul li .btn {
+        text-align: right; }
+  main .text {
+    padding: 20px 0 20px 0; }
+  main .btn {
+    text-align: right;
+    margin: 0 5px 5px 0; }
+  main .title {
+    text-decoration: none;
+    color: black; }
+  main .title:hover {
+    color: #ededed; }
+
+/*# sourceMappingURL=style.css.map */
