--- a/blog/css/style_start.scss
+++ b/blog/css/style_start.scss
@@ -1,16 +1,17 @@
 @charset "UTF-8";
 
 
-body{
+html,body{
   display: flex;
   align-content: center;
+  justify-content: space-between;
 
   margin: auto;
   padding: 0;
   height: 100vh;
   width: 960px;
   background: silver;
-  font:1em/1.3em Arial, Tahoma, "Trebuchet MS", sans-serif;
+  font:1em/1.3em Verdana, Geneva, sans-serif;
   color: #272727;
 
 
@@ -20,27 +21,22 @@ body{
         padding: 0;
         max-width: 960px;
         flex-flow: column wrap;
-        justify-content: space-around;
-        align-items: center;
 
-        nav{
-          display: flex;
-          margin: 0;
-          padding: 0;
-          flex-flow: row wrap;
-          align-self: flex-end;
-          .nav{
-            padding: 0;
-            margin: 0;
-            display: flex;
+
+        .nav{
+          display: inline-block;
+          text-align: right;
+
+
             li{
               padding: 20px;
               margin: 0;
               list-style: none;
+              text-decoration: none;
+              text-transform: uppercase;
+
               a{
                 color: #7233ed;
-                text-decoration: none;
-                text-transform: uppercase;
                 font-weight: 600;
                 &:hover{
                   color: #faa033;
@@ -48,11 +44,12 @@ body{
               }
             }
 
-          }
+
         }
 
         .button{
-          display: flex;
+          display: block;
+          text-align: center;
           margin: 20px ;
           padding: 5px;
           background: #faa033;
@@ -74,53 +71,37 @@ body{
           margin: auto;
           padding: 10px;
           flex-flow: column wrap;
-        }
-        /*.subscr {
-          display: flex;
-          height: 300px;
-          width: 60%;
-          margin: auto;
-          padding: 10px;
-          flex-flow: column wrap;
-          h2 {
-            display: flex;
-            margin: auto;
-            padding: 10px;
-          }
-          p {
-            display: flex;
-            margin: auto;
-            padding: 10px;
-          }
-          .redact {
-            display: flex;
-            width: 30%;
-            margin: 10px;
-            padding: 10px;
-            flex-flow: row wrap;
-            align-self: flex-end;
-            .redact_button {
+          justify-content: center;
+            li{
               display: flex;
+              flex-flow: column wrap;
+                a{
+                  display: flex;
+                  color: #7233ed;
+                  font-size: 26px;
+                  font-weight: 600;
+                  &:hover {
+                    color: #272727;
+                  }
+                }
+                .descr{
+                  text-align: center;
+                  margin: 20px;
+                  display: flex;
+                  width: 60%;
+                  font-size: 16px;
 
-              list-style: none;
-              a{
-                margin: 20px;
-                padding: 10px;
-                color: #7233ed;
-                text-decoration: none;
-                text-transform: uppercase;
 
-                font-weight: 600;
-                &:hover.button {
-                  color: #272727;
+                }
+                .adm_btns{
+                  //display: flex;
+                  text-align: center;
 
                 }
 
-              }
-
             }
-          }
+        }
 
-        }*/
       }
-}
+
+  }
