--- a/blog/css/style_start.scss
+++ b/blog/css/style_start.scss
@@ -1,107 +1,43 @@
 @charset "UTF-8";
 
-
 html,body{
-  display: flex;
-  align-content: center;
-  justify-content: space-between;
-
-  margin: auto;
   padding: 0;
-  height: 100vh;
-  width: 960px;
+  margin: 0;
+  height: 100%;
+  min-height: 100%;
   background: silver;
-  font:1em/1.3em Verdana, Geneva, sans-serif;
-  color: #272727;
+}
 
+.main{
+  width: 960px;
+  margin: 0 auto;
 
-      .main{
-        display: flex;
-        margin: 20px auto;
-        padding: 0;
-        max-width: 960px;
-        flex-flow: column wrap;
+  nav{
+    text-align: right;
 
+    a{
+      display: inline-block;
+      margin-left: 10px;
 
-        .nav{
-          display: inline-block;
-          text-align: right;
-
-
-            li{
-              padding: 20px;
-              margin: 0;
-              list-style: none;
-              text-decoration: none;
-              text-transform: uppercase;
-
-              a{
-                color: #7233ed;
-                font-weight: 600;
-                &:hover{
-                  color: #faa033;
-                }
-              }
-            }
-
-
-        }
-
-        .button{
-          display: block;
-          text-align: center;
-          margin: 20px ;
-          padding: 5px;
-          background: #faa033;
-          border-radius: 10px;
-          a{
-            color: #7233ed;
-            text-decoration: none;
-            text-transform: uppercase;
-            font-weight: 600;
-            &:hover{
-              color: #272727;
-            }
-          }
-        }
-
-        ul{
-          display: flex;
-          width: 60%;
-          margin: auto;
-          padding: 10px;
-          flex-flow: column wrap;
-          justify-content: center;
-            li{
-              display: flex;
-              flex-flow: column wrap;
-                a{
-                  display: flex;
-                  color: #7233ed;
-                  font-size: 26px;
-                  font-weight: 600;
-                  &:hover {
-                    color: #272727;
-                  }
-                }
-                .descr{
-                  text-align: center;
-                  margin: 20px;
-                  display: flex;
-                  width: 60%;
-                  font-size: 16px;
-
-
-                }
-                .adm_btns{
-                  //display: flex;
-                  text-align: center;
-
-                }
-
-            }
-        }
-
-      }
-
+    }
   }
+  &>.button{
+    text-align: center;
+    margin: 50px 0;
+  }
+  .blog-list{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+    li{
+      margin-bottom: 25px;
+
+      .for-title{
+        font-size: 18px;
+        color: #845300;
+      }
+    }
+  }
+
+}
