--- a/blog/css/style_blog.scss
+++ b/blog/css/style_blog.scss
@@ -1,118 +1,38 @@
 @charset "UTF-8";
 
-
-body{
-  display: flex;
-  align-content: center;
-
-  margin: auto;
+html,body{
+  margin: 0;
   padding: 0;
-  height: 100vh;
-  width: 960px;
+  height: 100%;
+  min-height: 100%;
   background: silver;
-  font:1em/1.3em Arial, Tahoma, "Trebuchet MS", sans-serif;
-  color: #272727;
+}
 
+.main {
+  width: 960px;
+  margin: 0 auto;
+  position: relative;
 
-      .main{
-        display: flex;
-        margin: 20px auto;
-        padding: 0;
-        max-width: 960px;
-        flex-flow: column wrap;
-        justify-content: space-around;
-        align-items: center;
-
-        nav{
-          display: flex;
-          margin: 0;
-          padding: 0;
-          flex-flow: row wrap;
-          align-self: flex-end;
-          .nav{
-            padding: 0;
-            margin: 0;
-            display: flex;
-            li{
-              padding: 20px;
-              margin: 0;
-              list-style: none;
-              a{
-                color: #7233ed;
-                text-decoration: none;
-                text-transform: uppercase;
-                font-weight: 600;
-                &:hover.nav{
-                  color: #faa033;
-                }
-              }
-            }
-
-          }
+  .nav {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    align-self: flex-end;
+    .nav {
+      padding: 0;
+      margin: 0;
+      li {
+        padding: 20px;
+        margin: 0;
+        list-style: none;
+        a {
+          color: #c1edca;
+          text-decoration: none;
+          text-transform: uppercase;
+          font-weight: 500;
         }
 
-        .button{
-          display: flex;
-          margin: 20px ;
-          padding: 5px;
-          background: #faa033;
-          border-radius: 10px;
-          a{
-            color: #7233ed;
-            text-decoration: none;
-            text-transform: uppercase;
-            font-weight: 600;
-            &:hover.button {
-              color: #272727;
-            }
-          }
-        }
-        .subscr {
-          display: flex;
-          height: 300px;
-          width: 60%;
-          margin: auto;
-          padding: 10px;
-          flex-flow: column wrap;
-          h2 {
-            display: flex;
-            margin: auto;
-            padding: 10px;
-          }
-          p {
-            display: flex;
-            margin: auto;
-            padding: 10px;
-          }
-          .redact {
-            display: flex;
-            width: 30%;
-            margin: 10px;
-            padding: 10px;
-            flex-flow: row wrap;
-            align-self: flex-end;
-            .redact_button {
-              display: flex;
-
-              list-style: none;
-              a{
-                margin: 20px;
-                padding: 10px;
-                color: #7233ed;
-                text-decoration: none;
-                text-transform: uppercase;
-
-                font-weight: 600;
-                &:hover.button {
-                  color: #272727;
-
-                }
-
-              }
-
-            }
-          }
-
-        }
       }
+    }
+  }
 }
