--- a/blog/css/style_blog.scss
+++ b/blog/css/style_blog.scss
@@ -13,25 +13,28 @@ html,body{
   margin: 0 auto;
   position: relative;
 
-  .nav {
-    display: flex;
+  nav{
+    text-align: right;
+
+    a{
+      display: inline-block;
+      margin-left: 10px;
+    }
+  }
+  &>.button{
+    text-align: center;
+    margin: 50px 0;
+  }
+  .blog-list{
+    list-style: none;
     margin: 0;
     padding: 0;
-    align-self: flex-end;
-    .nav {
-      padding: 0;
-      margin: 0;
-      li {
-        padding: 20px;
-        margin: 0;
-        list-style: none;
-        a {
-          color: #c1edca;
-          text-decoration: none;
-          text-transform: uppercase;
-          font-weight: 500;
-        }
 
+    li{
+      margin-bottom: 25px;
+
+      .for-title{
+        font-size: 36px;
       }
     }
   }
