--- a/e-shop/admin/style/app.css
+++ b/e-shop/admin/style/app.css
@@ -67,5 +67,46 @@ main {
     max-width: 960px;
     margin: 50px auto;
     padding: 20px; }
+  main .gallery {
+    list-style: none;
+    margin: 35px 0 0 0;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap; }
+    main .gallery li {
+      width: 150px;
+      height: 150px;
+      padding: 20px; }
+      main .gallery li > a {
+        display: block;
+        width: inherit;
+        height: inherit;
+        position: relative;
+        border: 1px solid transparent; }
+        main .gallery li > a:hover {
+          border-color: red; }
+        main .gallery li > a > .ph {
+          position: absolute;
+          display: block;
+          width: 100%;
+          height: 100%;
+          background: no-repeat center / cover; }
+        main .gallery li > a > .icon {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background: rgba(255, 255, 255, 0.7);
+          opacity: 0;
+          transition: all 0.3s ease; }
+          main .gallery li > a > .icon i {
+            font-size: 60px;
+            color: red; }
+          main .gallery li > a > .icon:hover {
+            opacity: 1; }
 
 /*# sourceMappingURL=app.css.map */
