--- a/e-shop/admin/style/app.scss
+++ b/e-shop/admin/style/app.scss
@@ -114,6 +114,63 @@ main{
     padding: 20px;
   }
 
+  //gallery
+  .gallery{
+    list-style: none;
+    margin: 35px 0 0 0;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+
+    li{
+      width: 150px;
+      height: 150px;
+      padding: 20px;
+
+      &>a{
+        display: block;
+        width: inherit; height: inherit;
+        position: relative;
+        border: 1px solid transparent;
+
+        &:hover{
+          border-color: red;
+        }
+
+        &>.ph{
+          position: absolute;
+          display:block;
+          width: 100%;
+          height: 100%;
+          background: no-repeat center / cover;
+
+        }
+        &>.icon{
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background: rgba(white, 0.7);
+          opacity: 0;
+          transition: all 0.3s ease;
+
+          i{
+            font-size: 60px;
+            color: red;
+          }
+          &:hover{
+            opacity: 1;
+          }
+
+        }
+      }
+    }
+  }
+
 }
 
 
