--- a/e-shop/css/style.css
+++ b/e-shop/css/style.css
@@ -235,7 +235,7 @@ a.item_add {
 	width: 100%;
     height: 700px;
     display: block;
-    background: url(../images/ba11.jpg)no-repeat right top;
+    background: no-repeat center / cover;
 	overflow-x:hidden;
 }
 .no-cssanimations .rw-wrapper .rw-sentence span:first-child{
