--- a/e-shop/css/adm-styles.css
+++ b/e-shop/css/adm-styles.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 .admin-cont {
   padding: 10px 0;
   background: #f67777; }
